ARENA-15857 - Liferay - Swedish translations needs to be looked at

--- a/portal-impl/src/content/Language_sv.properties
+++ b/portal-impl/src/content/Language_sv.properties
@@ -1,4 +1,4 @@
-##
+﻿##
 ## Language settings
 ##
 
@@ -850,7 +850,7 @@ allow-anonymous-emails=Tillåt anonyma epost
 allow-anonymous-posting=Tillåt anonyma inlägg
 allow-dictionary-words=Tillåt ord i ordlistan
 allow-dictionary-words-help=Kryssa i för att tillåta att ord ur ordlistan förekommer i lösenord.
-allow-manual-membership-management=Allow Manual Membership Management (Automatic Copy)
+allow-manual-membership-management=Tillåt manuell hantering av medlemskap (Automatic Copy)
 allow-modifications=Tillåt ändringar
 allow-multiple-categories=Tillåt flera kategorier
 allow-pingbacks=Tillåt Pingbacks
@@ -1250,7 +1250,7 @@ basic=Standard
 basic-configuration=Grundinställningar
 basic-document=Vanligt dokument
 basic-information=Grundläggande information
-basic-preview=Basic Preview (Automatic Copy)
+basic-preview=Förhandsgranska (Automatic Copy)
 basic-web-content=Vanligt innehåll
 bcc=Hemlig kopia
 be-sure-to-browse-our-guestbook-for-the-latest-entries=Glöm inte att {0}titta{1} i vår gästbok för senaste inlägg!
@@ -1313,8 +1313,8 @@ breadcrumbs=Breadcrumb spår
 breakfast=Frukost
 browse=Bläddra
 browse-blogs=Bläddra i bloggar
-browse-by-structure=Browse by Structure (Automatic Copy)
-browse-by-type=Browse by Type (Automatic Copy)
+browse-by-structure=Bläddra efter struktur (Automatic Copy)
+browse-by-type=Bläddra efter typ (Automatic Copy)
 browse-categories=Bläddra i kategorier
 browse-repository=Bläddra i lagringsplats
 browse-you-can-select-multiple-files=Bläddra (flerval tillåts)
@@ -1346,8 +1346,8 @@ calculate-the-shipping-based-on-a-percentage-of-the-total-amount-of-the-purchase
 call=Ring
 call-this-user=Call This User
 callback-url=Återanropa URL
-can-be-added-once=Can Be Added Once (Automatic Copy)
-can-be-added-several-times=Can Be Added Several Times (Automatic Copy)
+can-be-added-once=Kan läggas till en gång (Automatic Copy)
+can-be-added-several-times=Kan läggas till flera gånger (Automatic Copy)
 cancel=Avbryt
 cancel-all-uploads=Avbryt alla uppladdningar
 cancel-checkout[document]=Avbryt utcheckning
@@ -1463,11 +1463,11 @@ choose-a-program-to-import-contacts-from=Välj ett program som du importerar kon
 choose-a-resource-or-proceed-to-the-next-step=Välj en resurs eller fortsätt till nästa steg.
 choose-a-role=Välj roll
 choose-a-user-name-for-your-personal-company-email-address=Välj ett användarnamn till din företags e-postadress.
-choose-applications=Jobbansökan
+choose-applications=Välj applikationer
 choose-applications-export-help=Only the configuration of the selected applications will be exported. (Automatic Copy)
 choose-applications-publish-help=Only the configuration of the selected applications will be published. (Automatic Copy)
 choose-asset-type=Välj innehållstyp
-choose-content=Choose Content (Automatic Copy)
+choose-content=Välj innehåll (Automatic Copy)
 choose-content-export-help=Only the content and metadata of the selected applications will be exported. Use the <em>Change</em> option to disable the export of content and metadata for each application. (Automatic Copy)
 choose-content-publish-help=Only the content and metadata of the selected applications will be published. Use the <em>Change</em> option to disable the publication of content and metadata for each application. (Automatic Copy)
 choose-from-the-list-of-recommended-google-gadgets=Välj från listan över rekommenderade Google accessoarer.
@@ -1640,7 +1640,7 @@ convert-legacy-permission-algorithm=Konvertera från äldre rättighetssystem
 convert-to=Konvertera till
 convert-wiki-pages-from-classic-wiki-to-creole-format=Konvertera Wiki-sidor från klassiskt till Creole-format
 copy=Kopiera
-copy-applications=Jobbansökan
+copy-applications=Kopiera
 copy-as=Kopiera som
 copy-as-new=Kopiera till ny
 copy-data-definition=Kopiera datadefinition
@@ -1659,7 +1659,7 @@ copy-parent=Kopiera överliggande
 copy-template=Formatmall
 copy-templates=Formatmall
 copy-the-callback-url-and-specify-it-in-facebook=Kopiera återanrops-URL och specificera den i Facebook.
-copy-x=Copy {0} (Automatic Copy)
+copy-x=Kopiera {0} (Automatic Copy)
 copying-xuggler=Kopierar Xuggler...
 could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct-and-that-the-remote-server-is-configured-to-accept-requests-from-this-server=Kunde inte ansluta till adress {0}. Verifiera att den specificerade porten är korrekt och att den andra servern är konfigurerad att acceptera förfrågningar från denna server.
 could-not-save-draft-to-the-server=Kunde inte spara utkast på servern.
@@ -1703,7 +1703,7 @@ curl-example=Exempel med Curl
 currency=Valuta
 currency-symbols=Valutasymboler
 current=Aktuell
-current-and-previous=Current and Previous (Automatic Copy)
+current-and-previous=Pågående och föregående (Automatic Copy)
 current-folder=Aktuell mapp
 current-organization=Nuvarande organisation
 current-page=Nuvarande sida
@@ -1965,7 +1965,7 @@ direct-download=Direktnedladdning
 direct-download-url=URL för direktnedladdning
 direct-install=Direktinstallation
 directory=Katalog
-directory-indexing-enabled=Directory Indexing Enabled (Automatic Copy)
+directory-indexing-enabled=Indexering av mappar och filer för bläddring (Automatic Copy)
 directory-indexing-help=If this is checked, then the site administrator can browse the site's document library files and folders. For example, the site administrator for {0} can browse documents at {1}. (Automatic Copy)
 disable=Blockera
 disable-caching=Deaktivera cache
@@ -2036,9 +2036,9 @@ dns-lookup=DNS Lookup
 do-not-repeat=Upprepa inte
 do-not-repeat-this-event=Upprepa inte denna händelse.
 do-not-warn=Do Not Warn (Automatic Copy)
-do-you-want-to-create-a-user=Do you want to create a user? (Automatic Copy)
+do-you-want-to-create-a-user=Vill du lägga till en användare? (Automatic Copy)
 do-you-want-to-manage-the-installed-apps=Do you want to manage the installed apps? (Automatic Copy)
-do-you-want-to-modify-any-settings-of-your-portal=Do you want to modify any settings of your portal? (Automatic Copy)
+do-you-want-to-modify-any-settings-of-your-portal=Vill du ändra inställningar? (Automatic Copy)
 document=Dokument
 document-added-email=Document Added Email (Automatic Copy)
 document-conversion=Översättning av dokumentformat
@@ -2238,8 +2238,8 @@ emoticons=Känsloikoner
 employee-id=Personal-ID
 empty-cart=Töm kundvagnen
 empty-folder=Töm mappen
-empty-page=Empty Page (Automatic Copy)
-empty-page-description=Create an empty page you will lay out manually. (Automatic Copy)
+empty-page=Tom sida (Automatic Copy)
+empty-page-description=Skapa en tom sida som du sedan fyller med innehåll. (Automatic Copy)
 empty-the-recycle-bin=Töm papperskorgen
 empty-trash=Töm papperskorgen
 enable-birthday=Visa födelsedagar
@@ -2316,7 +2316,7 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Skriv in standardplatsnamnen <strong>per linje</strong> som är associerade med nyligen skapade användare.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Lägg in startnamnet till användargruppen <strong>per rad</strong> som är förknippat med de nya användarna.
 enter-the-encryption-algorithm-used-for-passwords-stored-in-the-ldap-server=Lägg in kryptering algoritmen som används till lösenorden lagrade på LDAP-servern.
-enter-the-friendly-url-that-will-be-used-by-both-public-and-private-pages=Enter the friendly URL that will be used by both public and private pages.
+enter-the-friendly-url-that-will-be-used-by-both-public-and-private-pages=Ange den friendly URL som ska mappa till både publika och privata sidor.
 enter-the-name,-image,-and-priority-level-in-descending-order=Skriv in namnet, bilden och prioritetsnivån i fallande ordning. Trådar med högre prioritet visas före trådar med lägre prioritet. Namnet används som prioritetens namn. Bilden används som prioritetens bild och kan vara en URL eller en relevant länk till temat.
 enter-the-public-and-private-virtual-host-that-will-map-to-the-public-and-private-friendly-url=Skriv in den publika och privata Virtual Host som ska mappa till både publika och privata Friendly URL.
 enter-the-search-filter-that-will-be-used-to-test-the-validity-of-a-user=Skriv in sökfiltret som ska användas för att testa valdiditeten av en användare. Termerna @company_id@, @email_address@, @screen_name@, och @user_id@ är återplacerade vid körning med korrekta värden.
@@ -2506,9 +2506,9 @@ font-style=Teckensnitt
 foot=Fot
 footer-web-content=Sidfotsinnehåll
 footnotes=Sidfot
-for-each-of-the-selected-content-types,-export-their=For each of the selected content types, export their: (Automatic Copy)
-for-each-of-the-selected-content-types,-import-their=For each of the selected content types, import their: (Automatic Copy)
-for-each-of-the-selected-content-types,-publish-their=For each of the selected content types, publish their: (Automatic Copy)
+for-each-of-the-selected-content-types,-export-their=För varje vald innehållstyp – exportera dess: (Automatic Copy)
+for-each-of-the-selected-content-types,-import-their=För varje vald innehållstyp – importera dess: (Automatic Copy)
+for-each-of-the-selected-content-types,-publish-their=För varje vald innehållstyp – publicera dess: (Automatic Copy)
 for-example,-if-the-public-virtual-host-is-www.helloworld.com-and-the-friendly-url-is-/helloworld=Till exempel, om Virtual Host är <strong>www.helloworld.com</strong> och URLn är <strong>/helloworld</strong>, då <strong>{0}://www.helloworld.com</strong> är mappad till <strong>{1}/helloworld</strong>.
 for-example-x=Till exempel, {0}.
 forbidden=Otillåten
@@ -2708,7 +2708,7 @@ hide-all-messages-like-this=Dölj alla liknande meddelanden.
 hide-assign-reviewers=Göm tilldelning av granskare
 hide-category-controls=Göm kategorikontroller
 hide-customizable-sections=Hide Customizable Sections (Automatic Copy)
-hide-from-navigation-menu=Hide from Navigation Menu (Automatic Copy)
+hide-from-navigation-menu=Visa inte i menyn (Automatic Copy)
 hide-image=Göm bild
 hide-instances-that-have-already-ended=Göm instanser som redan är avslutade
 hide-options=Göm val
@@ -3036,14 +3036,14 @@ layout-templates=Formatmallar
 layout.types.article=Artikel
 layout.types.control_panel=Kontrollpanel
 layout.types.embedded=Inbäddad
-layout.types.embedded.description=Show content from another website. (Automatic Copy)
+layout.types.embedded.description=Visa innehåll från en annan webbplats. (Automatic Copy)
 layout.types.link_to_layout=Länk till sida
-layout.types.link_to_layout.description=Link to another page in the current site. (Automatic Copy)
+layout.types.link_to_layout.description=Länka till en annan sida i samma Arena. (Automatic Copy)
 layout.types.panel=Panel
-layout.types.panel.description=Create a page with predefined applications and navigation. (Automatic Copy)
+layout.types.panel.description=Skapa en sida med fördefinierat innehåll. (Automatic Copy)
 layout.types.portlet=Portlet
 layout.types.url=URL
-layout.types.url.description=Link to another website. (Automatic Copy)
+layout.types.url.description=Länka till en annan webbplats. (Automatic Copy)
 layouts=Sidor
 ldap=LDAP
 ldap-export-must-not-be-enabled-when-autogeneration-of-user-passwords-is-enabled-for-ldap-import=LDAP export must not be enabled when autogeneration of user passwords is enabled for LDAP import. (Automatic Copy)
@@ -3107,7 +3107,7 @@ lists=Listor
 live=Publik
 live-session=Publik session
 live-sessions=Pågående sessioner
-load-more-results=Load More Results (Automatic Copy)
+load-more-results=Visa fler (Automatic Copy)
 loading=Loading (Automatic Copy)
 loading-accounts=Laddar konton...
 loading-folders=Laddar mappar...
@@ -3255,7 +3255,7 @@ medium-rectangle=Medelstor rektangel
 meeting=Möte
 members=Medlemmar
 members-to-invite=Medlemmar som bjuds in
-membership-options=Membership Options (Automatic Copy)
+membership-options=Medlemskap (Automatic Copy)
 membership-request=Medlemskapsförfrågan
 membership-requested=Medlemskap begärt
 membership-requests=Medlemskapsförfrågningar
@@ -3530,7 +3530,7 @@ move-selected-item-in-x-one-position-up=Move selected item in {0} one position u
 move-selected-items-from-x-to-x=Move selected items from {0} to {1}. (Automatic Copy)
 move-thread=Flytta tråd
 move-to=Flytta till
-move-to-the-recycle-bin=Move to the Recycle Bin (Automatic Copy)
+move-to-the-recycle-bin=Flytta till papperskorgen (Automatic Copy)
 move-web-content=Sidfotsinnehåll
 move-x=Move {0} (Automatic Copy)
 movie=Film
@@ -3594,7 +3594,7 @@ new-device-family=Lägg till regelgrupp
 new-document=Nytt dokument
 new-document-type=Ny dokumenttyp
 new-email-address=Ny epostadress
-new-export-process=New Export Process (Automatic Copy)
+new-export-process=Ny export (Automatic Copy)
 new-feed=Ny feed
 new-file-shortcut=Lägg till länk till fil
 new-folder=Ny mapp
@@ -5564,7 +5564,7 @@ the-above-results-include-groups-which-are-missing-the-required-attributes-(grou
 the-above-results-include-users-which-are-missing-the-required-attributes-(screen-name,-password,-email-address,-first-name,-and-last-name).-these-users-will-not-be-imported-until-these-attributes-are-filled-in=Resultaten ovan innehåller användare som saknar något av de obligatoriska fälten (användarnamn, lösenord, epost, förnamn, efternamn). Dessa användare kommer inte importeras förrän dessa fält har fyllts i.
 the-address-of-the-email-recipient=Adressen till e-postmottagaren
 the-address-of-the-email-sender=Adressen till e-postavsändaren
-the-applications-in-page-x-will-be-replaced-with-the-ones-in-the-page-you-select-below=The applications in page {0} will be replaced with the ones in the page you select below. (Automatic Copy)
+the-applications-in-page-x-will-be-replaced-with-the-ones-in-the-page-you-select-below=Innehållet på sidan {0} kommer att ersättas med innehållet på den sida du väljer nedan. (Automatic Copy)
 the-array-of-all-form-values-indexed-by-name=En array med alla fältvärden indexerad på namn.
 the-asset-could-not-be-found=Innehållet kunde inte hittas.
 the-audio-preview-is-not-yet-ready.-please-try-again-later=The audio preview is not yet ready. Please try again later. (Automatic Copy)
@@ -6172,7 +6172,7 @@ transaction-id=Transaktions-ID
 translate=Översätt
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 trash=Papperskorg
-trash-entries-max-age=Trash Entries Max Age (Automatic Copy)
+trash-entries-max-age=Spara innehåll i dagar (Automatic Copy)
 trash-entries-max-age-help=Number of days that entries will be kept in the Recycle Bin. Entries that have been in the Recycle Bin for more than this time will be automatically deleted. (Automatic Copy)
 travel=Resa
 tree-view=Träd-vy
@@ -6800,7 +6800,7 @@ you-can-create-a-shortcut-to-any-document-that-you-have-read-access-for=Du kan s
 you-can-customize-this-page=Du kan anpassa den här sidan.
 you-can-email-users-that-have-been-manually-added-to-the-database=Du kan skicka e-post till användarna som lades in i databasen manuellt. Användarna borde ha {0} som lösenord. Uppstart av användare kommer nollställa och ge de nya användarna ett slumpvalt lösenord och kommer meddela dem om deras nya kontostatus på portalen.
 you-can-get-a-license-directly-from-google=Du kan skaffa en licens direkt från Google
-you-can-manage-the-site-you-are-coming-from=You can manage the site you are coming from. (Automatic Copy)
+you-can-manage-the-site-you-are-coming-from=Hantera. (Automatic Copy)
 you-can-now-check-for-new-messages-in-your-x=Nu kan du kontrollera dina nya meddelanden i din {0}.
 you-cannot-apply-a-site-template-because-you-modified-the-display-settings-of-this-site=You cannot apply a site template because you modified the display settings of this site. Use the default language options to apply site templates. (Automatic Copy)
 you-cannot-assign-groups-or-users-to-this-role=Det går inte att tilldela grupper eller användare till den här rollen.
